--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <center>
     <h1>Welcome To Yatish's Online Home!</h1>
     <h2>This Is My IRL Home ❤️ </h2>
-    <img src="home.jpg" height="650">
+    <img src="my_images/home.jpg" height="650">
     <h2>Selected Major!</h2>
-    <img src="cheme.jpg" height="650">
+    <img src="my_images/cheme.jpg" height="650">
     <h2>Least Favorite Thing:</h2>
-    <img src="green.webp" height="650">
+    <img src="my_images/green.webp" height="650">
   </center>
 
   </body>
