--- a/portfolio.html
+++ b/portfolio.html
@@ -15,5 +15,7 @@
       h2    {font-family:Verdana}
       h2    {font-size:3em}
       </style>
+      <p>More is coming soon as our wonderful CSP journey continues!</p>
+    
   </body>
 </html>
