--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,10 @@
       h2    {font-family:Verdana}
       h2    {font-size:3em}
       </style>
-      <p>More is coming soon as our wonderful CSP journey continues!</p>
-    
-  </body>
+<center>
+  <img src="my_images/CHIPOTLE.png" height="650">
+  <p>The Chipotle Bowl Project by Chetan Reddy Yanamala and Yatish Yanamala is an interactive program that allows users to customize a bowl by selecting toppings, which are then visually represented using the Turtle module. With 32 possible combinations, the program translates user choices into simplified graphical elements, such as a green line for guacamole or a circle for beans. The project overcame challenges like centering the rice using the `.dot` method instead of `.circle`. The code includes specific implementations for beans, sour cream, and chicken/vegetables, demonstrating the flexibility of the program in generating various bowl designs.</p>
+
+</center>     
+</body>
 </html>
