--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <style>
-      body {background-color: powderblue;}
+      body {background-color: powderblue;} 
       h1   {color: blue;}
       h2    {color: red;}
       h2    {font-family:Verdana}
@@ -22,6 +22,8 @@
   <p>Our Minecraft game challenges players to catch falling apples in a basket while navigating an immersive setting. With user input for movement, a progressive difficulty system, and a three-strike rule, players must react quickly to avoid losing lives. A dynamic scoreboard tracks scores, and a leaderboard with long-term memory keeps records. The game increases the drop rate of apples and evil chorus fruits to be avoided over time, adding excitement and challenge.</p>
   <img src="my_images/TOM.png" height="650">
   <p>In this fast-paced Tom and Jerry-inspired game, you play as the cunning cat, dashing across the screen to catch sneaky rats while dodging fierce hounds charging in from the sides. As the game progresses, the rats get quicker, and the dogs become more unpredictable, forcing you to react swiftly to survive. With a three-strike rule keeping the tension high, every move counts—miss too many rats or get caught by a dog, and it's game over! A dynamic scoreboard tracks your success, while a long-term leaderboard lets you compete for the top spot. Stay sharp, move fast, and prove you're the ultimate rat-catcher!</p>
+  <iframe src="https://scratch.mit.edu/projects/1157035933/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <p>In this exciting Scratch Game, you compete to feed a starving dinosaur with the least amount of jumps!</p>
 </center>     
 </body>
 </html>
