--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,8 @@
   <p>In this fast-paced Tom and Jerry-inspired game, you play as the cunning cat, dashing across the screen to catch sneaky rats while dodging fierce hounds charging in from the sides. As the game progresses, the rats get quicker, and the dogs become more unpredictable, forcing you to react swiftly to survive. With a three-strike rule keeping the tension high, every move counts—miss too many rats or get caught by a dog, and it's game over! A dynamic scoreboard tracks your success, while a long-term leaderboard lets you compete for the top spot. Stay sharp, move fast, and prove you're the ultimate rat-catcher!</p>
   <iframe src="https://scratch.mit.edu/projects/1157035933/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <p>In this exciting Scratch Game, you compete to feed a starving dinosaur with the least amount of jumps!</p>
+  <img src="my_images/Screenshot 2025-05-07 114018.png" height="650">
+  <p>In our fish tank project, we walked through a attempt at phishing and crawled through everything from files and emails and debugged a vulnerability in fish tank code through the iteration of the native VS code debugger.</p>
 </center>     
 </body>
 </html>
