--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,8 @@
   <p>In this exciting Scratch Game, you compete to feed a starving dinosaur with the least amount of jumps!</p>
   <img src="my_images/Screenshot 2025-05-07 114018.png" height="650">
   <p>In our fish tank project, we walked through a attempt at phishing and crawled through everything from files and emails and debugged a vulnerability in fish tank code through the iteration of the native VS code debugger.</p>
+  <img src="my_images/rovers.png" height="650">
+  <p>We compared the rover's sensor graphs to the known environmental data to identify the Rocky Mountain region. Most of the data — including sound, temperature, and wind — showed similar patterns between the Rocky Mountains and the Desert Plains, which made it challenging to distinguish between the two at first. However, the light data stood out as the key difference. While both regions experience intense light during the day, the Rocky Mountains had noticeable dips in light due to cloud cover, unlike the consistently bright conditions in the Desert Plains. This difference helped us confidently match the graphs to the Rocky Mountain region.</p>
 </center>     
 </body>
 </html>
